WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149955
Fix the !ENABLE(STREAM_API) build after
r190794
https://bugs.webkit.org/show_bug.cgi?id=149955
Summary
Fix the !ENABLE(STREAM_API) build after r190794
Csaba Osztrogonác
Reported
2015-10-09 08:27:26 PDT
http://trac.webkit.org/changeset/190794
broke the !ENABLE(STREAM_API) build: In file included from ../../Source/WebCore/bindings/js/JSDOMWindowBase.h:25:0, from DerivedSources/WebCore/JSDOMWindow.h:25, from ../../Source/WebCore/bindings/js/JSDOMGlobalObject.cpp:31: ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:39:34: error: unused parameter ‘visitor’ [-Werror=unused-parameter] void visit(JSC::SlotVisitor& visitor) { ^ ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:44:36: error: unused parameter ‘globalObject’ [-Werror=unused-parameter] void init(JSC::JSGlobalObject& globalObject) { ^ cc1plus: all warnings being treated as errors
Attachments
Patch
(1.58 KB, patch)
2015-10-09 08:28 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-10-09 08:28:43 PDT
Created
attachment 262774
[details]
Patch
youenn fablet
Comment 2
2015-10-09 08:32:15 PDT
Thanks for fixing it. LGTM.
WebKit Commit Bot
Comment 3
2015-10-09 10:08:58 PDT
Comment on
attachment 262774
[details]
Patch Clearing flags on attachment: 262774 Committed
r190804
: <
http://trac.webkit.org/changeset/190804
>
WebKit Commit Bot
Comment 4
2015-10-09 10:09:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug