Fix the !ENABLE(STREAM_API) build after r190794 https://bugs.webkit.org/show_bug.cgi?id=149955

Reviewed by Darin Adler.

* bindings/js/WebCoreJSBuiltinInternals.h:
(WebCore::JSBuiltinInternalFunctions::visit):
(WebCore::JSBuiltinInternalFunctions::init):


Canonical link: https://commits.webkit.org/168106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190804 268f45cc-cd09-0410-ab3c-d52691b4dbfc